step_1/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: echo-ingress

spec:
  rules:
    - host: echo1.stephansemerad.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo1
                port:
                  number: 80

    - host: echo2.stephansemerad.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo2
                port:
                  number: 80

  ingressClassName: nginx
